Fix #559 - Testimonials section gaps

--- a/assets/css/companies-banner.css
+++ b/assets/css/companies-banner.css
@@ -7,6 +7,7 @@
   vertical-align: auto;
   padding-top: var(--lgPadding);
   padding-bottom: var(--lgPadding);
+  margin-bottom: -20px;
 }
 
 .companies-title-section h3,
